# liblwgeom

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mailmap  AUTHORS  CMakeLists.txt  ChangeLog  K-means.c  Makefile  README.md  bitset.c  bitset.h  building_regularization.c  bytebuffer.h  configure.ac  create_changelog.sh  geohash.c  geohash.h  hashtable.h  liblwgeom.c  liblwgeom.h  liblwgeom_internel.h  lwalgorithm.c  lwbuilding_regularization.c  lwellipse.h  lwgeom_centroid.c  lwgeom_graph.c  lwgeom_graph.h  lwgeom_log.h  lwgeom_ordinate.c  lwgeom_ordinate.h  lwgeom_prop_geo.c  lwgeom_prop_value.c  lwgeom_simplifier.c  lwin_ewkb.c  lwin_ewkt.c  lwin_geojson.c  lwin_gml.c  lwin_kml.c  (+20 more)
algorithm/: lwalgorithm.c
algorithm/building/: lwbuilding_regularization.c
algorithm/delaunay/: lwgeom_graph.h
algorithm/properties/: lwgeom_centroid.c  lwgeom_prop_value.c
algorithm/simplify/: lwgeom_simplifier.c
cmake/: FindIconv.cmake
geom/: liblwgeom.h
include/: algorithms.h  btree.h  factory.h  geohash.h  geom.h  mathse.h  mathse_geom.h  mathse_i4.h  mathse_io.h  mesh.h  mg.h  mghelp.h  nmea.h  nv.h  rtree.h  stream.h
include/index/: btree.h  geohash.h  rtree.h
include/nv/: logging.h  version.h
include/stream/: i4.h  table.h
include/util/: bitset.h  buf.h  encode.h  hash.h  logging.h  matrix.h  sda.h  sort.h  stok.h  uuid.h
index/: geohash.c
io/: lwin_ewkb.c  lwin_geojson.c  lwin_gml.c  lwin_kml.c  lwin_wkb.c  lwout_ewkb.c  lwout_geojson.c  lwout_kml.c  stok.c
mathSE/:  matrix.c  algorithm.c  algorithm.h  base64.c  btree.c  btree.h  coordinate.c  coordinate.h  crs.c  crs.h  factory.h  graphics.c  hashtable.c  hashtable.h  i4.c  i4.h  index.c  index.h  io.h  lmz.h  math-private.c  math-private.h  mathSE.cpp  mathSE.h  mathcommon.c  mmalloc.h  rw.h  sort.h  table.c  table.h  threadpool.c
mathSE/algorithm/: alg_area.c  alg_envelope.c  alg_labelpoint.c  alg_length.c  pv_area.c
mathSE/index/: geohash.c  geohash.h
mathSE/io/: sbuf.c  sbuf.h
src/: CMakeLists.txt  algorithm.c  alloc.h  bitset.h  coordinate.c  coordinate.cpp  error.c  error.h  geobject.c  geom-internal.h  geom.c  geom.h  graphic.h  io.c  liblwgeom.c  liblwgeom.h  lwellipse.c  lwellipse.h  mathSE.h  math_util.c  math_util.h  mathse.c  mathse.h  mathse_algorithm.h  mathse_alloc.h  mathse_canvas.h  mathse_crs.h  mathse_geohash.h  mathse_geom.c  mathse_geom.h  mathse_matrix.h  mathse_table.h  mg.c  mg.h  mgp.h  nmea.c  nv-common.c  nv-common.h  sort.c  tolerance.c
src/algorithm/: angle.c  arc.c  area.c  box.c  building-regularization.c  center.c  centroid.c  clone.c  distance.c  ellipse.c  envelope.c  geompoint.c  label.c  length.c  mathse_algorithm.h  point.c
src/canvas/: canvas.h  color.c  color.h
src/cluster/: DBSCAN.c  K-means.c
src/graph/: graph.c  graph.h
src/index/: btree.c  geohash.c  geohash.h  rtree.c
src/io/: ewkb.c  ewkt.c  geojson.c  gml.c  in_ewkb.c  in_ewkt.c  in_geojson.c  in_gml.c  in_kml.c  in_ora.c  in_wkb.c  in_wkt.c  io.c  kml.c  lwin_ora.c  lwin_wkt.c  lwordinate.c  lwordinate.h  lwout_ewkb.c  lwout_geojson.c  lwstok.h  mathse_i4.h  mathse_table.h  ora.c  ora.cpp  ordinate.c  ordinate.h  out_ewkb.c  out_ewkt.c  out_geojson.c  out_gml.c  out_kml.c  out_ora.c  out_wkb.c  out_wkt.c  stok.c  stok.h  wkb.c  wkt.c  wkt.cpp
src/mg/: arc.c  area.c  box.c  building-regularization.c  center.c  centroid.c  clone.c  distance.c  ellipse.c  envelope.c  length.c  point.c
src/nv/: base64.c  btree.h  buf.h  encode.h  hash.h  logging.h  sort.c  sort.h  uuid.c  uuid.h
src/nv-util/: base64.c  bitset.c  bitset.h  btree.c  btree.h  buf.c  buf.h  encode.h  hash.c  hash.h  hashmap.c  hashmap.h  hashtable.h  logging.h  matrix.c  matrix.h  md5.c  sda.c  sda.h  sort.c  uuid.c  uuid.h
src/simplify/: douglaspeuckersimplifier.c  rdp.c
src/util/: base64.c  bitset.c  buf.c  hash.c  matrix.c  matrix.h  md5.c  sda.c  sort.c  stok.c  uuid.c  var.h
src/utils/: base64.c  base64.h  encode.h  hash.c  hash.h  logging.h  matrix.c  matrix.h  sbuf.h  sort.c  sort.h  stok.c  stok.h  threadpool.c  threadpool.h  var.h
tests/: CMakeLists.txt  bittwiddlinghacks.c  mathseTestOp.c  mathseTestUtil.h  mathse_test_op.c  testbase.h
tests/algorithm/: ellipseTest.c  pointTest.c
tests/io/: wktTest.c
tests/mg/: ellipseTest.c  pointTest.c
tests/util/: bitsetTest.c  hashTest.c  stokTest.c
tools/viewer/: mapsettings.h
util/: bitset.c  bitset.h  logger.c  logger.h  lwutil.c  lwutil.h  meson.build  sda.h  zlog.conf
