file(GLOB_RECURSE _sources ${CMAKE_CURRENT_LIST_DIR}/*.c CONFIGURE_DEPEND)
add_executable(nv_unit_test ${_sources})
if(WIN32)
    target_link_libraries(nv_unit_test cunit libnv)
else()
    target_link_libraries(nv_unit_test cunit nv)
endif()

file(GLOB_RECURSE _testfiles ${CMAKE_CURRENT_LIST_DIR}/**/*Test.c CONFIGURE_DEPEND)
enable_testing() 

foreach(_testfile ${_testfiles})
    string(REPLACE ${CMAKE_CURRENT_LIST_DIR}/ "" _testname ${_testfile})
    string(REPLACE "Test.c" "" _testname ${_testname})
    string(REPLACE "/" "-" _cmake_testname  ${_testname})
    add_test(NAME unit-${_cmake_testname} COMMAND nv_unit_test ${_cmake_testname})
endforeach()